--- a/package.json
+++ b/package.json
@@ -4,7 +4,6 @@
   "description": "",
   "main": "hardhat.config.js",
   "directories": {
-    "doc": "docs",
     "test": "test"
   },
   "scripts": {
@@ -17,14 +16,26 @@
   "devDependencies": {
     "@nomicfoundation/hardhat-ignition": "^3.0.7",
     "@nomicfoundation/hardhat-toolbox-viem": "^5.0.2",
+    "@nomiclabs/hardhat-ethers": "^2.0.0",
     "@types/node": "^22.19.7",
     "chai": "^6.2.2",
+    "ethers": "^6.16.0",
     "forge-std": "github:foundry-rs/forge-std#v1.9.4",
     "hardhat": "^3.1.6",
     "typescript": "~5.8.0",
     "viem": "^2.45.1"
   },
   "dependencies": {
-    "@openzeppelin/contracts": "^5.4.0"
-  }
+    "@metamask/detect-provider": "^2.0.0",
+    "@openzeppelin/contracts": "^5.4.0",
+    "web3": "^4.16.0"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/asemnurlan/Galaxy-Transfer-Tokens.git"
+  },
+  "bugs": {
+    "url": "https://github.com/asemnurlan/Galaxy-Transfer-Tokens/issues"
+  },
+  "homepage": "https://github.com/asemnurlan/Galaxy-Transfer-Tokens#readme"
 }
